# beast-server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  launch.vs.json  makefile  readme.md
html/: index.html
res/cmake/: NSIS.template.in  tzdata.cmake
src/: log.hpp  main.cpp  result.hpp
